# AI-Supervisor

./: PROJECT_COMPLETE.docx  PROJECT_COMPLETE.md  PROJECT_REBUILD_COMPLETE.md  README.md  deploy_url.txt  download-functionality-test-report.md  download_test_report.md  minimax_website_research_report.md  supervisor_test_results.json  test_enhanced_supervisor.py  test_supervisor.py  website_download_testing_report.md  website_layout_analysis_report.md
Supervisorai-main/: FINAL_DEMO.py  __init__.py  audit.jsonl  core.py  hybrid_config.json  knowledge_base.json  server_integrated.py  simple_server.py  test_comprehensive.py  usage_examples.py
ai-supervision-dashboard/: package.json  pnpm-lock.yaml
ai-supervisor-monitor/: package.json  pnpm-lock.yaml
supervisor-mcp-agent/: README.md  mcp-server.json  pyproject.toml  run.sh
supervisor-mcp-agent/src/: integrated_supervisor.py
supervisor-mcp-agent/src/error_handling/: README.md  examples.py
supervisor-mcp-agent/src/monitoring/: README.md
supervisor-mcp-agent/src/reporting/: README.md  comprehensive_demo.py  config.json  demo.py  quick_demo.py  simple_demo.py
supervisor-mcp-agent/src/reporting/demo_output/: alerts.json  audit_events.json  complete_export.json  confidence_data.json  dashboard_data.json  detected_patterns.json  events_export.csv  supervisor_report.md
supervisor-mcp-agent/src/reporting/final_demo_output/: alerts_summary.json  confidence.jsonl  confidence_calibration_report.md  confidence_metrics.json
supervisor-mcp-agent/src/supervisor_agent/: __init__.py  pattern_learner.py  quality_analyzer.py
(+272 files in other folders)
